packages/libresat-cluster/deprecated/traefik-old.toml.yaml
kind: DaemonSet
apiVersion: extensions/v1beta1
metadata:
  name: traefik-ingress-controller
  namespace: kube-system
  labels:
    k8s-app: traefik-ingress-lb
spec:
  template:
    metadata:
      labels:
        k8s-app: traefik-ingress-lb
        name: traefik-ingress-lb
    spec:
      serviceAccountName: traefik-ingress-controller
      terminationGracePeriodSeconds: 60
      containers:
        - image: traefik:alpine
          name: traefik-ingress-lb
          ports:
            - name: http
              containerPort: 80
              hostPort: 80
            - name: admin
              containerPort: 8080
              hostPort: 8080
          securityContext:
            capabilities:
              drop:
                - ALL
              add:
                - NET_BIND_SERVICE
          volumeMounts:
            - mountPath: /etc/traefik/
              name: traefik-toml
            - mountPath: /etc/traefik/acme
              name: traefik-acme
          args:
            - "-c /etc/traefik/traefik.toml"
      volumes:
        - name: traefik-toml
          configMap:
            name: traefik-toml
            items:
              - key: config
                path: traefik.toml
        - name: traefik-acme
          configMap:
            name: traefik-acme
            items:
              - key: config
                path: acme.json
                mode: 0600 # ACME wants less open permissions
                # We need to fork the docker container ...
                # Or, even better, fork the complete k8s objects!
---
kind: Service
apiVersion: v1
metadata:
  name: traefik-ingress-service
  namespace: kube-system
spec:
  selector:
    k8s-app: traefik-ingress-lb
  ports:
    - protocol: TCP
      port: 80
      name: web
    - protocol: TCP
      port: 8080
      name: admin
